@@ -1,3 +1,13 @@
+2015-05-15  Kaz Kylheku  <kaz@kylheku.com>
+
+	* eval.c (symbol_value): Retrieve the binding of a symbol
+	macro also.
+	(boundp): Return t for symbol macros.
+	(makunbound, fmakunbound): New functions.
+	(eval_init): Register makunbound and fmakunbound.
+
+	* txr.1: Document changes to symbol-value and boundp.
+
 2015-05-14  Kaz Kylheku  <kaz@kylheku.com>
 
 	* lib.c (replace_list, replace_str, replace_vec): Handle
